# api/swagger.yaml
@@ -65,6 +65,25 @@ paths:
               type: "integer"
               format: "int32"
       x-swagger-router-controller: "Crypto"
+  /crypto/sentiment/reddit:
+    get:
+      tags:
+      - "Crypto"
+      summary: "Returns reddit sentiment data"
+      description: "Runs sentiment analysis on /r/bitcoin"
+      operationId: "reddit_sentiment"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "object"
+            additionalProperties:
+              type: "integer"
+              format: "int32"
+      x-swagger-router-controller: "Crypto"
 definitions:
   Coin:
     type: "object"
